# garth-relay

./: .dockerignore  .env.example  .firebaserc  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  firebase.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: register_subscriber.py
src/: config.py  logging_setup.py  main.py  templates_config.py
src/auth/: __init__.py  google_oauth2.py  oidc.py  session.py
src/crypto/: __init__.py  token_encryptor.py
src/db/: __init__.py  firestore_client.py  firestore_token_storage.py
src/middleware/: __init__.py  csrf.py  security.py
src/models/: __init__.py  firestore_models.py  oauth_models.py
src/routes/: __init__.py  auth.py  bulk_sync.py  connections.py  connections_helpers.py  garmin_auth.py  pages.py  polling.py  sync_common.py  sync_weight.py  webhooks.py
src/services/: __init__.py  garmin_client.py  google_health_client.py  oauth_state_store.py  omron_client.py  sync_orchestrator.py
src/templates/: base.html  bulk-sync.html  connect-google.html  dashboard.html  error.html  garmin-connect.html  garmin-mfa.html  login.html  sync-weight.html
src/templates/partials/: garmin-auth-result.html  sync-nav.html
tests/: conftest.py  test_auth.py  test_bulk_sync.py  test_encryption.py  test_firestore_client.py  test_firestore_token_storage.py  test_garmin_auth.py  test_garmin_client.py  test_google_health_client.py  test_google_oauth2.py  test_main.py  test_oidc.py  test_pages.py  test_polling.py  test_security.py  test_sync_common.py  test_sync_omron.py  test_sync_orchestrator.py  test_sync_weight.py  test_version.py  test_webhooks.py
