[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[project]
name = "garth-relay"
version = "0.1.0"
description = "Garth Relay service"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "CyberFossa", email = "cyberfossadev@proton.me"}
]
license = {text = "MIT"}

dependencies = [
    "structlog>=25.4.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "environ-config>=24.1",
    "google-cloud-firestore>=2.19",
    "pydantic>=2.7",
    "cryptography>=44.0",
    "python-jose[cryptography]>=3.3",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
    "httpx>=0.28",
    "garth-ng>=2.0.0a0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.9",
    "mypy>=1.13",
    "httpx>=0.28",
]

[tool.uv.build-backend]
module-name = "src"
module-root = ""

[tool.uv]
prerelease = "allow"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C", "PL", "I", "UP"]
ignore = ["PLR0913", "PLR2004", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
